Fix CompoundPluginRepositoryTest